--- a/sass/components/_menu.scss
+++ b/sass/components/_menu.scss
@@ -1,5 +1,137 @@
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  .menu-container {
+    width: 480px;
+    position: fixed;
+    height: 800px;
+    background-color: white;
+    transform: translateX(-500px);
+    transition: transform 1s;
+    padding: 0 40px;
+    opacity: 0;
+    pointer-events: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 2;
+  }
+
+  .is-open {
+    transform: translateX(0);
+
+    opacity: 1;
+    pointer-events: all;
+  }
+
+  .close-menu,
+  .open-menu {
+    cursor: pointer;
+    &:hover {
+      fill: #2196f3;
+
+      background-color: transparent;
+    }
+  }
+  .open-menu {
+    position: relative;
+    top: 12px;
+    right: 25px;
+  }
+
+  .close-menu {
+    position: absolute;
+    top: 15px;
+    right: 24px;
+    border-radius: 50px;
+    border-color: transparent;
+    background-color: transparent;
+    font-size: 30px;
+  }
+  .mobile-closebutton {
+    position: absolute;
+    width: 40px;
+    height: 40px;
+    border-radius: 0%;
+
+    fill: rgb(214, 51, 51);
+    cursor: pointer;
+
+    &:hover {
+      fill: #2196f3;
+    }
+  }
+
+  .mobile-link {
+    color: #212121;
+    text-decoration: none;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 40px;
+    line-height: 47px;
+    letter-spacing: 0.02em;
+    padding-bottom: 36px;
+    margin-left: 20px;
+    margin-right: 20px;
+    position: relative;
+
+    &:hover {
+      color: #2196f3;
+      cursor: pointer;
+      background-color: transparent;
+    }
+
+    &:focus {
+      color: #2196f3;
+      cursor: pointer;
+      background-color: transparent;
+    }
+  }
+  .mobile-link--phone {
+    color: #2196f3;
+    font-size: 34px;
+    &:hover {
+      text-decoration: underline;
+      background-color: transparent;
+    }
+  }
+  .mobile-link--mail {
+    color: #757575;
+    font-size: 24px;
+  }
+
+  .menu-wrap {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    padding-top: 48px;
+  }
+  .menu-wrap--contact {
+    padding-top: 250px;
+  }
+  .menu-wrap--socials {
+    margin-left: 20px;
+    cursor: pointer;
+    &:hover {
+      text-decoration: underline;
+    }
+  }
+  .menu-socials {
+    color: #2196f3;
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 22px;
+    letter-spacing: 0.02em;
+  }
+
+  .menu-socials-line {
+    margin-left: 10px;
+    color: #2196f3;
+  }
+}
+
 @media screen and (min-width: 768px) and (max-width: 1199px) {
-  .js-menu-container {
+  .menu-container {
     width: 480px;
     position: fixed;
     height: 800px;
@@ -12,26 +144,34 @@
     left: 0;
     display: none;
     background-color: red;
+
+    opacity: 0;
+    pointer-events: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 2;
   }
 
   .is-open {
     transform: translateX(0);
     display: none;
+    opacity: 1;
+    pointer-events: all;
   }
 
-  .js-close-menu,
-  .js-open-menu {
+  .close-menu,
+  .open-menu {
     cursor: pointer;
     display: none;
   }
-
-  .js-open-menu {
+  .open-menu {
     position: relative;
     top: 5px;
     display: none;
   }
 
-  .js-close-menu {
+  .close-menu {
     position: absolute;
     top: 15px;
     right: 24px;
@@ -43,7 +183,7 @@
   }
 }
 @media screen and (min-width: 1200px) {
-  .js-menu-container {
+  .menu-container {
     width: 480px;
     position: fixed;
     height: 800px;
@@ -63,19 +203,19 @@
     display: none;
   }
 
-  .js-close-menu,
-  .js-open-menu {
+  .lose-menu,
+  .open-menu {
     cursor: pointer;
     display: none;
   }
 
-  .js-open-menu {
+  .open-menu {
     position: relative;
     top: 5px;
     display: none;
   }
 
-  .js-close-menu {
+  .close-menu {
     position: absolute;
     top: 15px;
     right: 24px;
