--- a/sass/components/_pageheader.scss
+++ b/sass/components/_pageheader.scss
@@ -8,8 +8,10 @@
   }
 
   .header__menu {
-    width: 480px;
+    width: 450px;
     height: 60px;
+    padding-left: 15px;
+    padding-right: 15px;
     font-style: normal;
     font-weight: 700;
     font-size: 18px;
