--- a/sass/components/_pagesectionclients.scss
+++ b/sass/components/_pagesectionclients.scss
@@ -8,13 +8,15 @@
   }
   .clients__container {
     color: #ffffff;
-
-    width: 480px;
+    padding-left: 15px;
+    padding-right: 15px;
+    width: 450px;
   }
 
   .clients__wrapper {
-    width: 480px;
-
+    width: 450px;
+    padding-left: 15px;
+    padding-right: 15px;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -45,7 +47,7 @@
   }
 
   .clients__paragraf {
-    width: 480px;
+    width: 450px;
     font-family: var(--main-font);
     font-style: normal;
     font-weight: 900;
@@ -56,7 +58,8 @@
     color: #212121;
     text-decoration: solid;
     text-align: center;
-
+    padding-left: 15px;
+    padding-right: 15px;
     margin: 0;
     padding-bottom: 50px;
   }
