--- a/css/main.css
+++ b/css/main.css
@@ -92,7 +92,7 @@
   }
   .footer__form-newsletter {
     display: flex;
-    width: 480px;
+    width: 450px;
     flex-direction: column;
     align-items: center;
     justify-content: center;
@@ -1146,7 +1146,7 @@
     transition: cubic-bezier(0.4, 0, 0.2, 1);
   }
   .clients__paragraf {
-    width: 768px;
+    width: 450px;
     font-family: var(--main-font);
     font-style: normal;
     font-weight: 900;
@@ -2369,13 +2369,16 @@
 
 @media screen and (min-width: 320px) and (max-width: 767px) {
   .menu-container {
-    width: 480px;
+    width: 450px;
     position: fixed;
     height: 800px;
     background-color: white;
-    transform: translateX(-500px);
+    transform: translateX(500px);
+    transform: scaleX(0);
     transition: transform 1s;
-    padding: 0 40px;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin-left: 150px;
     opacity: 0;
     pointer-events: none;
     position: fixed;
@@ -2385,6 +2388,7 @@
   }
   .is-open {
     transform: translateX(0);
+    transform: scaleX(1);
     opacity: 1;
     pointer-events: all;
   }
@@ -2489,7 +2493,7 @@
 }
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   .menu-container {
-    width: 480px;
+    width: 768px;
     position: fixed;
     height: 800px;
     background-color: white;
