--- a/sass/components/_menu.scss
+++ b/sass/components/_menu.scss
@@ -1,12 +1,15 @@
 @media screen and (min-width: 320px) and (max-width: 767px) {
   .menu-container {
-    width: 480px;
+    width: 450px;
     position: fixed;
     height: 800px;
     background-color: white;
-    transform: translateX(-500px);
+    transform: translateX(500px);
+    transform: scaleX(0);
     transition: transform 1s;
-    padding: 0 40px;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin-left: 150px;
     opacity: 0;
     pointer-events: none;
     position: fixed;
@@ -17,7 +20,7 @@
 
   .is-open {
     transform: translateX(0);
-
+    transform: scaleX(1);
     opacity: 1;
     pointer-events: all;
   }
@@ -132,7 +135,7 @@
 
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   .menu-container {
-    width: 480px;
+    width: 768px;
     position: fixed;
     height: 800px;
     background-color: white;
