--- a/sass/components/_pagefooter.scss
+++ b/sass/components/_pagefooter.scss
@@ -240,7 +240,7 @@
   }
 
   .footer__logo {
-    font-family: var(--logo-font);
+    font-family: var(--logolll-font);
     font-style: normal;
     font-weight: 700;
     font-size: 26px;
