--- a/sass/components/_menu.scss
+++ b/sass/components/_menu.scss
@@ -9,10 +9,10 @@
     transition: transform 1s;
     padding-left: 15px;
     padding-right: 15px;
-    margin-left: 150px;
+    // margin-left: 100px;
     opacity: 0;
     pointer-events: none;
-    position: fixed;
+    position: absolute;
     top: 0;
     left: 0;
     z-index: 2;
@@ -34,9 +34,9 @@
     }
   }
   .open-menu {
-    position: relative;
-    top: 12px;
-    right: 25px;
+    position: absolute;
+    top: 0;
+    right: 0;
   }
 
   .close-menu {
