--- a/sass/components/_menu.scss
+++ b/sass/components/_menu.scss
@@ -68,7 +68,7 @@
     font-style: normal;
     font-weight: 500;
     font-size: 40px;
-    line-height: 47px;
+    line-height: 1.17;
     letter-spacing: 0.02em;
     padding-bottom: 36px;
     margin-left: 20px;
@@ -122,7 +122,7 @@
     font-style: normal;
     font-weight: 500;
     font-size: 18px;
-    line-height: 22px;
+    line-height: 1.22;
     letter-spacing: 0.02em;
   }
 
