--- a/sass/components/_pagesectionteam.scss
+++ b/sass/components/_pagesectionteam.scss
@@ -37,7 +37,7 @@
     color: #212121;
     font-weight: 500;
     font-size: 18px;
-    line-height: 19px;
+    line-height: 1.17;
     width: 450px;
     height: 60px;
     display: flex;
@@ -136,7 +136,7 @@
     color: #212121;
     font-weight: 500;
     font-size: 18px;
-    line-height: 19px;
+    line-height: 1.17;
     width: 354px;
     display: flex;
     flex-direction: column;
@@ -239,26 +239,9 @@
     max-width: 270px;
     padding-top: 30px;
     padding-bottom: 30px;
-    line-height: 30px;
+    line-height: 1.17;
     margin: 0%;
     gap: 0%;
-  }
-
-  .section__paragraf {
-    width: 1200px;
-    font-family: var(--main-font);
-    font-style: normal;
-    font-weight: 900;
-    font-size: 36px;
-    line-height: 60px;
-    text-transform: uppercase;
-    letter-spacing: 0.03em;
-    color: #212121;
-    text-decoration: solid;
-    text-align: center;
-    display: inline-block;
-    margin: 0;
-    padding-bottom: 50px;
   }
 
   .socials__icon {
