--- a/sass/components/_pageheader.scss
+++ b/sass/components/_pageheader.scss
@@ -8,18 +8,19 @@
 
   .header__menu {
     width: 450px;
-    height: 60px;
+
     padding-left: 15px;
     padding-right: 15px;
     font-style: normal;
     font-weight: 700;
-    font-size: 18px;
-    line-height: 200%;
+    font-size: 14px;
+    line-height: 1.17;
     letter-spacing: 0.06em;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 0px;
+    padding-top: 30px;
+    padding-bottom: 30px;
     margin: 0px;
   }
   .header__logo {
@@ -29,7 +30,7 @@
     font-style: normal;
     font-weight: 700;
     font-size: 26px;
-    line-height: 31px;
+    line-height: 1.19;
     letter-spacing: 0.03em;
     text-decoration: none;
   }
@@ -40,7 +41,7 @@
     font-style: normal;
     font-weight: 500;
     font-size: 14px;
-    line-height: 171%;
+    line-height: 1.19;
     letter-spacing: 0.02em;
     padding-right: 0px;
     margin-left: 20px;
@@ -65,7 +66,7 @@
     font-style: normal;
     font-weight: 500;
     font-size: 14px;
-    line-height: 171%;
+    line-height: 1.17;
     letter-spacing: 0.02em;
     padding-right: 0px;
     margin-left: 20px;
@@ -79,7 +80,7 @@
     }
   }
   .link--contact {
-    line-height: 16px;
+    line-height: 1.17;
     margin-right: 15px;
     display: none;
   }
@@ -111,7 +112,7 @@
       width: 100%;
       height: 5px;
       background-color: #2196f3;
-      bottom: -37px;
+      bottom: -20px;
       left: 0;
     }
   }
@@ -128,16 +129,17 @@
 
   .header__menu {
     width: 768px;
-    height: 80px;
+
     font-style: normal;
     font-weight: 700;
-    font-size: 18px;
-    line-height: 200%;
+    font-size: 14px;
+    line-height: 1.17;
     letter-spacing: 0.06em;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 0px;
+    padding-top: 40px;
+    padding-bottom: 40px;
     margin: 0px;
   }
   .header__logo {
@@ -147,7 +149,7 @@
     font-style: normal;
     font-weight: 700;
     font-size: 26px;
-    line-height: 31px;
+    line-height: 1.19;
     letter-spacing: 0.03em;
     text-decoration: none;
   }
@@ -159,7 +161,7 @@
     font-style: normal;
     font-weight: 500;
     font-size: 14px;
-    line-height: 171%;
+    line-height: 1.17;
     letter-spacing: 0.02em;
     padding-right: 0px;
     margin-left: 20px;
@@ -184,7 +186,7 @@
     font-style: normal;
     font-weight: 500;
     font-size: 14px;
-    line-height: 171%;
+    line-height: 1.17;
     letter-spacing: 0.02em;
     padding-right: 0px;
     margin-left: 20px;
@@ -198,7 +200,7 @@
     }
   }
   .link--contact {
-    line-height: 16px;
+    line-height: 1.17;
     margin-right: 15px;
   }
 
@@ -229,7 +231,7 @@
       width: 100%;
       height: 5px;
       background-color: #2196f3;
-      bottom: -37px;
+      bottom: -44px;
       left: 0;
     }
   }
@@ -251,8 +253,8 @@
     width: 1200px;
     font-style: normal;
     font-weight: 700;
-    font-size: 18px;
-    line-height: 200%;
+    font-size: 14px;
+    line-height: 1.17;
     letter-spacing: 0.06em;
     display: flex;
     justify-content: space-between;
@@ -264,7 +266,7 @@
     font-style: normal;
     font-weight: 700;
     font-size: 26px;
-    line-height: 31px;
+    line-height: 1.19;
     letter-spacing: 0.03em;
     text-decoration: none;
   }
@@ -275,7 +277,7 @@
     font-style: normal;
     font-weight: 500;
     font-size: 14px;
-    line-height: 171%;
+    line-height: 1.17;
     letter-spacing: 0.02em;
     padding-right: 0px;
     margin-left: 20px;
@@ -296,7 +298,7 @@
   }
 
   .link--contact {
-    line-height: 16px;
+    line-height: 1.17;
     margin-right: 15px;
   }
 
@@ -326,7 +328,7 @@
       width: 100%;
       height: 5px;
       background-color: #2196f3;
-      bottom: -37px;
+      bottom: -44px;
       left: 0;
     }
   }
@@ -336,7 +338,7 @@
     font-style: normal;
     font-weight: 500;
     font-size: 14px;
-    line-height: 171%;
+    line-height: 1.17;
     letter-spacing: 0.02em;
     padding-top: 3px;
     margin-left: 50px;
