--- a/sass/components/_pagesectionwhatwedo.scss
+++ b/sass/components/_pagesectionwhatwedo.scss
@@ -38,7 +38,7 @@
     font-style: normal;
     font-weight: 900;
     font-size: 44px;
-    line-height: 60px;
+    line-height: 1.17;
     text-transform: uppercase;
     letter-spacing: 0.03em;
     color: #212121;
@@ -68,9 +68,9 @@
     background: rgba(47, 48, 58, 0.8);
     font-family: var(--main-font);
     font-style: normal;
-    font-weight: 100;
+
     font-size: 14px;
-    line-height: 16px;
+    line-height: 1.17;
     text-align: center;
     letter-spacing: 0.03em;
     text-transform: uppercase;
