--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,7 +1,6 @@
 @import "utils/variables";
 @import "components/pagefooter";
 @import "components/pageheader";
-@import "components/pagemain";
 @import "components/pagesectionclients";
 @import "components/pagesectionarticle";
 @import "components/pagesectionportfolio";
@@ -9,3 +8,6 @@
 @import "components/pagesectionwhatwedo";
 @import "components/modal";
 @import "components/menu";
+@import "components/nav";
+@import "components/order";
+@import "components/button";
