--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -6,6 +6,7 @@
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.2);
+    transition: cubic-bezier(250ms);
   }
   .modal__container {
     position: absolute;
@@ -238,6 +239,7 @@
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.2);
+    transition: cubic-bezier(250ms);
   }
   .modal__container {
     position: absolute;
@@ -470,6 +472,7 @@
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.2);
+    transition: cubic-bezier(250ms);
   }
   .modal__container {
     position: absolute;
