--- a/sass/components/_pagefooter.scss
+++ b/sass/components/_pagefooter.scss
@@ -221,15 +221,14 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    padding-top: 65px;
+
     padding-bottom: 60px;
   }
 
   .footer__container {
     display: flex;
     flex-wrap: wrap;
-
-    width: 768px;
+    justify-content: center;
   }
 
   .footer__address {
@@ -237,9 +236,8 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding-top: 60px;
+    margin: 50px;
     padding-bottom: 0px;
-    width: 384px;
   }
 
   .footer__logo {
@@ -250,23 +248,18 @@
     line-height: 1.19;
     letter-spacing: 0.03em;
     text-decoration: none;
-    padding-bottom: 0px;
-    margin-bottom: 20px;
-    padding: 0px;
+    color: #2196f3;
+    
   }
   .footer__socialmedia {
     display: flex;
     flex-direction: column;
-    padding-top: 60px;
+    margin: 50px;
     align-items: center;
   }
 
   .footer__icon-box {
-    max-width: 270px;
-    max-height: 100px;
-    display: flex;
-    padding-right: 0px;
-    padding: 0;
+    margin: 20px;
   }
 
   .socials__icons--footer {
@@ -282,49 +275,36 @@
   }
 
   .socialmedia__paragraf {
-    width: 384px;
     font-family: var(--main-font);
     font-style: normal;
     font-weight: 900;
     font-size: 16px;
-    line-height: 16;
+    line-height: 1.17;
     text-transform: uppercase;
     letter-spacing: 0.03em;
     color: #ffffff;
     text-decoration: solid;
     text-align: center;
-
     margin: 0;
-  }
-
-  .footer__form-newsletter {
-    width: 768px;
   }
 
   .form-newsletter__paragraf {
-    width: 768px;
     font-family: var(--main-font);
     font-style: normal;
     font-weight: 900;
     font-size: 16px;
-    line-height: 16;
+    line-height: 1.17;
     text-transform: uppercase;
     letter-spacing: 0.03em;
     color: #ffffff;
     text-decoration: solid;
     text-align: center;
-
-    margin: 0;
-    padding-top: 50px;
   }
   .form-newsletter__box {
-    width: 768px;
     display: flex;
     flex-direction: column;
     align-items: center;
     margin: 0px;
-    padding-top: 20px;
-    padding-bottom: 60px;
   }
 
   .form-newsletter__button-icon {
