--- a/sass/components/_pagesectionclients.scss
+++ b/sass/components/_pagesectionclients.scss
@@ -47,7 +47,7 @@
   }
 
   .clients__paragraf {
-    width: 400px;
+    min-width: 320px;
     font-family: var(--main-font);
     font-style: normal;
     font-weight: 900;
@@ -58,7 +58,8 @@
     color: #212121;
     text-decoration: solid;
     text-align: center;
-    display: inline-block;
+    display: flex;
+    justify-content: center;
     margin: 0;
     padding-bottom: 50px;
   }
@@ -117,7 +118,7 @@
   }
 
   .clients__paragraf {
-    width: 400px;
+    min-width: 768px;
     font-family: var(--main-font);
     font-style: normal;
     font-weight: 900;
@@ -175,7 +176,7 @@
   }
 
   .clients__paragraf {
-    width: 1200px;
+    min-width: 1200px;
     font-family: var(--main-font);
     font-style: normal;
     font-weight: 900;
