--- a/sass/components/_pagesectionportfolio.scss
+++ b/sass/components/_pagesectionportfolio.scss
@@ -1,120 +1,8 @@
-.slider__container {
-  color: #ffffff;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  border-top: 1px solid #ececec;
-  padding-top: 94px;
-  padding-bottom: 50px;
-}
-
-.portfolio__box {
-  margin-bottom: 10px;
-  position: relative;
-  overflow: hidden;
-}
-
-.portfolio__container {
-  max-width: 1200px;
-  margin: 0 auto;
-}
-
-.wrapper {
-  max-width: 1200px;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  gap: 0;
-  padding: 0;
-  margin: 0;
-}
-
-.portfolio {
-  color: #ffffff;
-  display: flex;
-  justify-content: center;
-  padding-bottom: 44px;
-  margin: 0;
-  gap: 0;
-}
-
-.description-portfolio {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  color: #212121;
-  max-width: 370px;
-  padding-top: 20px;
-  padding-bottom: 20px;
-  padding-left: 20px;
-  z-index: 1;
-}
-
-.portfolio__figure {
-  margin: 0 auto;
-  margin-bottom: 30px;
-  border-radius: 1%;
-  border: 1px solid #eeeeee;
-
-  &:hover {
-    margin: 0 auto;
-    background-color: #ffffff;
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-      0px 2px 1px rgba(0, 0, 0, 0.2);
-    border-radius: 0px 0px 4px 4px;
-  }
-}
-
-.figure__onlay {
-  position: relative;
-  overflow: hidden;
-}
-.portfolio__figure:hover .figure__onlay-hidden,
-.portfolio__figure:focus .figure__onlay-hidden {
-  transform: translateY(-100%);
-}
-
-.figure__onlay-hidden {
-  background-color: #2196f3;
-  position: absolute;
-  padding-top: 20px;
-  padding-left: 35px;
-  width: 100%;
-  height: 100%;
-  transform: translateY(0);
-  transition: transform 250ms ease;
-}
-.figure__text-hidden {
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 1.55;
-  letter-spacing: 0.03em;
-  color: #ffffff;
-  position: absolute;
-  width: 301px;
-  text-align: justify;
-}
-.button--portfolio {
-  color: #212121;
-  background-color: #f5f4fa;
-  margin-left: 8px;
-  padding: 10px 32px;
-  border-radius: 4px 4px 4px 4px;
-  &:hover,
-  &:focus {
-    color: #ffffff;
-    box-shadow: var(--box-shadow);
-    background-color: var(--button-color);
-    transition: cubic-bezier(0.4, 0, 0.2, 1);
-  }
-}
-
 @media screen and (min-width: 320px) and (max-width: 767px) {
   .slider__container {
     color: #ffffff;
     display: flex;
-
+    justify-content: center;
     border-top: 1px solid #ececec;
     padding-top: 60px;
     padding-bottom: 40px;
@@ -174,6 +62,7 @@
       box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
         0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
       border-radius: 0px 0px 4px 4px;
+      transition: cubic-bezier(250ms);
     }
   }
 
@@ -204,23 +93,6 @@
     color: #ffffff;
     position: absolute;
     width: 301px;
-    text-align: justify;
-  }
-  .button--portfolio {
-    color: #212121;
-
-    background-color: #f5f4fa;
-    margin-left: 8px;
-    padding: 10px 32px;
-    margin: 5px;
-    border-radius: 4px 4px 4px 4px;
-    &:hover,
-    &:focus {
-      color: #ffffff;
-      box-shadow: var(--box-shadow);
-      background-color: var(--button-color);
-      transition: cubic-bezier(0.4, 0, 0.2, 1);
-    }
   }
 }
 
@@ -290,6 +162,7 @@
       box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
         0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
       border-radius: 0px 0px 4px 4px;
+      transition: cubic-bezier(250ms);
     }
   }
 
@@ -320,34 +193,23 @@
     color: #ffffff;
     position: absolute;
     width: 301px;
-    text-align: justify;
-  }
-  .button--portfolio {
-    color: #212121;
-    background-color: #f5f4fa;
-    margin-left: 8px;
-    padding: 10px 32px;
-    border-radius: 4px 4px 4px 4px;
-    &:hover,
-    &:focus {
-      color: #ffffff;
-      box-shadow: var(--box-shadow);
-      background-color: var(--button-color);
-      transition: cubic-bezier(0.4, 0, 0.2, 1);
-    }
   }
 }
 
 @media screen and (min-width: 1200px) {
   .slider__container {
+    min-width: 1200px;
     color: #ffffff;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
     border-top: 1px solid #ececec;
     padding-top: 94px;
     padding-bottom: 50px;
+
+    padding-left: 10px;
+    padding-right: 10px;
   }
 
   .portfolio__box {
@@ -362,7 +224,7 @@
   }
 
   .wrapper {
-    max-width: 1200px;
+    min-width: 1200px;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
@@ -390,8 +252,23 @@
     padding-bottom: 20px;
     padding-left: 20px;
     z-index: 1;
-  }
 
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 36px;
+    letter-spacing: 2;
+  }
+  .description-portfolio__subject {
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 30px;
+    letter-spacing: 1.88;
+    color: #757575;
+  }
   .portfolio__figure {
     margin: 0 auto;
     margin-bottom: 30px;
@@ -404,6 +281,7 @@
       box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
         0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
       border-radius: 0px 0px 4px 4px;
+      transition: cubic-bezier(250ms);
     }
   }
 
@@ -435,19 +313,5 @@
     position: absolute;
     width: 301px;
     text-align: justify;
-  }
-  .button--portfolio {
-    color: #212121;
-    background-color: #f5f4fa;
-    margin-left: 8px;
-    padding: 10px 32px;
-    border-radius: 4px 4px 4px 4px;
-    &:hover,
-    &:focus {
-      color: #ffffff;
-      box-shadow: var(--box-shadow);
-      background-color: var(--button-color);
-      transition: cubic-bezier(0.4, 0, 0.2, 1);
-    }
   }
 }
